@@ -215,6 +215,15 @@ See <<builtin-modules-apmmongo, module/apmmongo>> for more information about
 the MongoDB Go Driver instrumentation.
 
 [float]
+==== DynamoDB
+
+We provide instrumentation for AWS DynamoDB. This is usable with
+https://github.com/aws/aws-sdk-go[AWS SDK Go].
+
+See <<builtin-modules-apmawssdkgo, module/apmawssdkgo>> for more information
+about AWS SDK Go instrumentation.
+
+[float]
 [[supported-tech-rpc]]
 === RPC Frameworks
 
