@@ -18,8 +18,6 @@
 package apmawssdkgo // import "go.elastic.co/apm/module/apmawssdkgo"
 
 import (
-	"strings"
-
 	"go.elastic.co/apm"
 	"go.elastic.co/apm/module/apmhttp"
 	"go.elastic.co/apm/stacktrace"
@@ -50,11 +48,23 @@ func WrapSession(s *session.Session) *session.Session {
 	return s
 }
 
+const (
+	serviceS3       = "s3"
+	serviceDynamoDB = "dynamodb"
+)
+
 var (
 	serviceTypeMap = map[string]string{
-		"s3": "storage",
+		serviceS3:       "storage",
+		serviceDynamoDB: "db",
 	}
 )
+
+type service interface {
+	spanName() string
+	resource() string
+	setAdditional(*apm.Span)
+}
 
 func send(req *request.Request) {
 	if req.RetryCount > 0 {
@@ -68,16 +78,23 @@ func send(req *request.Request) {
 	}
 
 	ctx := req.Context()
-
 	tx := apm.TransactionFromContext(ctx)
 	if tx == nil {
 		return
 	}
 
-	bucketName := getBucketName(req)
+	var svc service
+	switch spanSubtype {
+	case serviceS3:
+		svc = newS3(req)
+	case serviceDynamoDB:
+		svc = newDynamoDB(req)
+	default:
+		// Unsupported type
+		return
+	}
 
-	spanName := req.ClientInfo.ServiceID + " " + req.Operation.Name + " " + bucketName
-	span := tx.StartSpan(spanName, spanType, apm.SpanFromContext(ctx))
+	span := tx.StartSpan(svc.spanName(), spanType, apm.SpanFromContext(ctx))
 	if !span.Dropped() {
 		ctx = apm.ContextWithSpan(ctx, span)
 		req.HTTPRequest = apmhttp.RequestWithContext(ctx, req.HTTPRequest)
@@ -93,7 +110,7 @@ func send(req *request.Request) {
 
 	span.Context.SetDestinationService(apm.DestinationServiceSpanContext{
 		Name:     spanSubtype,
-		Resource: bucketName,
+		Resource: svc.resource(),
 	})
 
 	if region := req.Config.Region; region != nil {
@@ -101,6 +118,8 @@ func send(req *request.Request) {
 			Region: *region,
 		})
 	}
+
+	svc.setAdditional(span)
 
 	req.SetContext(ctx)
 }
@@ -118,19 +137,4 @@ func complete(req *request.Request) {
 	if err := req.Error; err != nil {
 		apm.CaptureError(ctx, err).Send()
 	}
-}
-
-// getBucketName extracts the bucket name from the URL generated by the AWS SDK
-// for communicating with S3. By default, the SDK will use the virtual bucket
-// naming scheme, http://BUCKET.s3.amazonaws.com/KEY, to communicate with S3.
-// Regardless of configuration, some routes will rely on the path style,
-// http://s3.amazonaws.com/BUCKET/KEY.
-// https://github.com/aws/aws-sdk-go/blob/d9428afe4490b19/aws/config.go#L118-L127
-func getBucketName(req *request.Request) string {
-	host := req.HTTPRequest.URL.Host
-	if strings.HasPrefix(host, req.ClientInfo.ServiceName) {
-		return strings.Split(req.HTTPRequest.URL.Path[1:], "/")[0]
-	}
-
-	return strings.Split(req.HTTPRequest.URL.Host, ".")[0]
 }
